# notes-ml

./: .gitignore  README.MD  README.md
Competition/: README.MD
Competition/天池-NLP-新闻文本分类/: Bert.ipynb  bert.py  fasttext.ipynb  fasttext.py  fasttext=0.90.ipynb  textcnn.ipynb  word2vec.ipynb
Example/CIFAR10/: CIFAR10_VGG16.py  lenet_torch.py  myCNN.py  net32.ipynb  network.py
Example/CMN_ENG/: 1_data.ipynb  3_predict.py  config.py  d2l-dataloader.py  dataloader.ipynb
Example/FashionMNIST/: fashion_mnist_LeNet5.py
Example/Insect_CLF/: Insect.py  Insect_train.py
Example/MNIST/: lenet_torch.py  mnist_ANN自定义网络.py  mnist_LeNet5.py
Example/TimeMachine/: Dataloader.py
Example/WangFeng/: DataLoader.py  data.ipynb  data.py  net_para.pkl  文本-预测-S1.ipynb  文本-预测-S2.ipynb
Example/champagne/: champ_predict.ipynb  champ_predict.py  torch_lstm.ipynb  torchlstm.py
Example/imdb/: imdb_torch.ipynb  imdb_torch.py
Example/pokeman/: pokeman_train.py
Example/表情识别/: Task2.ipynb  cnn.py
LongLongNote/: test.py
LongLongNote/CH10_卷积神经网络/: ResNet.py  ResNet_BasicBlock.py  ResNet_cifar10.py
LongLongNote/CH11_循环神经网络/: GRU.py
LongNote/CH7/: 多输出感知机求梯度.py  损失函数及梯度.py  激活函数.py
LongNote/ch6/: 全连接层.py
ML_Algorithm_test/CNN/: LeNet-5.py
ML_Algorithm_test/EvaluationModel/: EvaluationModel.py
ML_Algorithm_test/GaussianProcess/: GaussianProces.ipynb  LinearRegression.py  gp.py
ML_Algorithm_test/NN/: boston-NN.ipynb  neuralnetwork.py
ML_Algorithm_test/RandomForest/: RF2-CV.ipynb  RF_Demo.ipynb  TFFoam_RF.py  __init__.py  randomforest.py
ML_Algorithm_test/SVM/: SVM.py  SVM_Demo.ipynb  svm.ipynb
ML_Algorithm_test/TFFoam/: ML_Model.py  ML_SA_CG.pb
ML_Algorithm_test/XGBoost/: Cai.ipynb  XGBDemo.ipynb
NNUtils/: NLP.py
NNUtils/nlp/: demo.ipynb  embedding.py  tt.ipynb
NNUtils/torchwu/: __init__.py  torchwu.py
NeuralNetwork/: LSTM.py  Seq2Seq.py  Seq2Seq_ref.py  trf.ipynb
NeuralNetwork/note/: Transformer.ipynb
Note_D2L/: -60 机器翻译【实战】.ipynb  -64 注意力机制.ipynb  52 文本预处理.ipynb  53 语言模型.ipynb  55 RNN.ipynb  56 GRU.ipynb  62 seq2seq.ipynb  64 注意力机制.ipynb  65 注意力分数.ipynb  66 使用注意力机制的seq2seq.ipynb  68 Transformer-1 多头注意力.ipynb  B14.3 预训练词嵌入数据集.ipynb  B14.4 预训练word2vec.ipynb  B14.9 预训练bert数据集.ipynb  TEST.ipynb  TEST.py
Note_D2L/old/: 1..ipynb  4.5 WD.ipynb
Note_D2L/练习/: DataLoader_WF.py
Note_LongLong/CH10_卷积神经网络/: ResNet_cifar10.py
Note_LongLong/CH11_循环神经网络/: myRNN.py
Note_LongLong/CH7/: 2nd_derivative.py
Note_LongLong/ch6/: loadData.py
Note_ML_Algorithm/: GaussianProcess.ipynb
Note_ML_Algorithm/GaussianProcess/: LinearRegression.py  gp.py
Note_ML_Algorithm/LGB/: CLS.ipynb  REGR.ipynb
Note_ML_Algorithm/NN/: neuralnetwork.py
Note_ML_Algorithm/RandomForest/: RF_Demo.ipynb  TFFoam_RF.py  randomforest.py
Note_ML_Algorithm/SVM/: SVM_Demo.ipynb
Note_ML_Algorithm/TFFoam/: mv_scaler.save
Note_ML_Algorithm/XGBoost/: Cai.ipynb
Note_MyML/: README.md  test.py
Note_NLP/: word2vec.py
Note_NLP/Bert_pretrain/: Bert_demo.ipynb
Note_NLP/HuggingFace_/: Case_文本填空.ipynb  datasets.csv  shulide.py
Note_PyTorch_beginner/: 1_Tensors.ipynb  4_训练一个分类器.ipynb
data/: 汪峰.txt
ml_utils/torchwu/: README.MD  (+1 more)
notes_knowledge/notes_learn_tensorrt_basic/: CMakeLists.txt  README.MD
notes_knowledge/notes_learn_tensorrt_basic/basic-1.1-hello/: main.cpp  model.py
notes_knowledge/notes_learn_tensorrt_basic/basic-1.3-cnn-and-dynamic-shape/: main.cpp
notes_knowledge/notes_learn_tensorrt_basic/basic-1.4-onnx-editor/: create-onnx.py  demo.change.onnx  demo.onnx  make-onnx-pb.sh  my.onnx  pytorch-gen-onnx.py  read-onnx.py
notes_knowledge/notes_learn_tensorrt_basic/basic-1.4-onnx-editor/pbout/: onnx-ml.pb.h  onnx_ml_pb2.py
notes_knowledge/notes_learn_tensorrt_basic/basic-1.5-onnx-parser/: gen-onnx.py  main.cpp
notes_knowledge/notes_learn_tensorrt_basic/basic-1.5-onnx-parser/workspace/: demo.onnx  engine.trtmodel
notes_knowledge/notes_learn_tensorrt_basic/basic-1.6-onnxparser-source/: main.cpp  my_readme.md
notes_knowledge/notes_learn_tensorrt_basic/basic-1.6-onnxparser-source/onnx/: make_pb.sh
notes_knowledge/notes_learn_tensorrt_basic/basic-1.6-onnxparser-source/src/onnx/: onnx-ml.pb.h  onnx-operators-ml.pb.h
notes_knowledge/notes_learn_tensorrt_basic/basic-1.7-hello-plugin/: main.cpp
notes_knowledge/notes_learn_tensorrt_basic/basic-1.7-hello-plugin/src/: main_ref.cpp
notes_model/: Attention.py  LeNet.py  Loss.py  Seq2Seq_ref.py  Transformer.py  trf.ipynb
notes_utils_api/cython_/: CMakeLists.txt  main.py  tools.c
notes_utils_api/cython_/build_cpp/: README.MD  test_lib.py
notes_utils_api/cython_/build_cpp/src_cpp/: a.out  mathfunlib.cpp  mathfunlib.hpp  pyInterface.cpp  setup.py  testLib.cpp
notes_utils_api/cython_/build_py/: README.MD  setup.py  tools.py.bak  tools.pyd
notes_utils_api/cython_/demo2_c_to_py/: main.c  main.cpp  main.py  readme.md  tools.cpp  tools.h
notes_utils_api/cython_/demo_cpp_to_py/: CMakeLists.txt  cpp_add.c  cpp_add.cpp  cpp_add.h  cpp_add.pyx  demo_test.py  main.cpp  setup.py
task/: __init__.py
神经网络与深度学习-邱_Exer/: 草泥马
(+215 files in other folders)
